added token security
